apps/compiler/src/parser/parser.cpp
#include <format>

#include "error/reporting.h"

#include "parser/parser.h"
#include "util/logger.h"

namespace hemera::parser {

	ParserState::ParserState(std::string_view file_path, 
		MyVector<Token>& tokens, Allocator<ast::Node> node_alloc)
		: current{ 0 }
		, tokens{ tokens }
		, node_alloc{ node_alloc }
		, file_path{ file_path }
		, has_errors{ false }
	{}
	ParserState::ParserState(const ParserState&) = default;
	ParserState::~ParserState() = default;

	ExprResult::ExprResult(bool success, ast::Node* result)
		: success{ success }
		, result{ result }
	{}
	ExprResult::ExprResult(const ExprResult&) = default;
	ExprResult::ExprResult(ExprResult&&) = default;
	ExprResult& ExprResult::operator=(const ExprResult&) = default;
	ExprResult& ExprResult::operator=(ExprResult&&) = default;
	ExprResult::~ExprResult() = default;

	static inline size_t clamp_index(size_t index, size_t size) {
		static const size_t ZERO = 0;
		return std::max(ZERO, std::min(size - 1, index));
	}

	static inline Token current_token(ParserState* state) {
		size_t index = clamp_index(state->current, state->tokens.size());
		return state->tokens[index];
	}

	static inline Token next_token(ParserState* state, size_t offset = 1) {
		size_t index = clamp_index(state->current + offset,
			state->tokens.size());
		return state->tokens[index];
	}

	static inline void report_error_on_last_token(ParserState* state,
		ErrorCode code) {
		Token token = current_token(state);
		report_error(code, state->file_path, token.line_number,
			token.column_number);
		state->has_errors = true;
	}

	static inline void report_error_on_last_token(ParserState* state,
		ErrorCode code, std::string_view additional_info) {
		Token token = current_token(state);
		report_error(code, state->file_path, token.line_number, 
			token.column_number, additional_info);
		state->has_errors = true;
	}

	static void delete_node(Allocator<ast::Node>& node_alloc, ast::Node* node) {
		if (node == nullptr) {
			return;
		}
		for (ast::Node* child : node->children) {
			delete_node(node_alloc, child);
		}
		node->children.clear();
		node_alloc.delete_object<ast::Node>(node);
	}

	/// <summary>
	/// Quick type deduction for obvious types.
	/// </summary>
	/// <param name="node">The node to check.</param>
	static void type_check_node(ast::Node* node) {
		LOG_ASSERT(node != nullptr);
		if (node == nullptr) {
			return;
		}

		ast::NodeType type = node->node_type;
		TokenType token_type = node->value.type;

		if (type == ast::NodeType::LITERAL) {
			if (token_type == TokenType::LITERAL_CHAR) {
				node->type = BUILTIN_char;
			}
			if (token_type == TokenType::LITERAL_FLOATING_POINT) {
				node->type = BUILTIN_f64;
			}
			if (token_type == TokenType::LITERAL_INTEGER) {
				node->type = BUILTIN_int;
			}
			if (token_type == TokenType::LITERAL_STRING) {
				node->type = BUILTIN_string;
			}
			if (token_type == TokenType::KEYWORD_TRUE) {
				node->type = BUILTIN_bool;
			}
			if (token_type == TokenType::KEYWORD_FALSE) {
				node->type = BUILTIN_bool;
			}
			if (token_type == TokenType::KEYWORD_NULL) {
				node->type = BUILTIN_void;
			}
		}
		//TODO(ches) handle more types here
	}

	ast::Node& next_as_node(ParserState* state, ast::NodeType type,
		ast::Node* parent) {
		Token current = current_token(state);
		ast::Node* result = state->node_alloc.new_object<ast::Node>(type, current);
		if (parent != nullptr) {
			parent->children.push_back(result);
		}
		state->current += 1;
		type_check_node(result);
		return *result;
	}

	bool accept(ParserState* state, TokenType token, ast::NodeType type,
		ast::Node& parent) {
		if (current_token(state).type == token) {
			Token current = current_token(state);
			ast::Node* child = state->node_alloc.new_object<ast::Node>(type, current);
			parent.children.push_back(child);
			state->current += 1;

			type_check_node(child);
			return true;
		}
		return false;
	}

	bool expect(ParserState* state, TokenType token) {
		return current_token(state).type == token;
	}

	bool skip(ParserState* state, TokenType token) {
		if (current_token(state).type == token) {
			state->current += 1;
			return true;
		}
		return false;
	}

	static bool could_be_function_input(const TokenType& type) {
		return TokenType::IDENTIFIER == type
			|| TokenType::SYM_AMPERSAND == type
			|| TokenType::SYM_UNDERSCORE == type
			|| TokenType::PIPE_REORDER_IDENTIFIER == type
			|| TokenType::DIRECTIVE == type
			|| TokenType::KEYWORD_MATCH == type
			|| TokenType::OPERATOR_PLUS == type
			|| TokenType::OPERATOR_MINUS == type
			|| TokenType::OPERATOR_BITWISE_XOR == type
			|| TokenType::OPERATOR_NOT == type
			|| TokenType::SYM_DOT == type
			|| TokenType::SYM_LPAREN == type
			|| TokenType::KEYWORD_AUTO_CAST == type
			|| TokenType::KEYWORD_BIT_CAST == type
			|| TokenType::KEYWORD_CAST == type
			|| TokenType::LITERAL_CHAR == type
			|| TokenType::LITERAL_FLOATING_POINT == type
			|| TokenType::LITERAL_INTEGER == type
			|| TokenType::LITERAL_STRING == type
			|| TokenType::KEYWORD_TRUE == type
			|| TokenType::KEYWORD_FALSE == type
			|| TokenType::KEYWORD_NULL == type
			;
	}

	ast::Node* file(std::string_view file_path, MyVector<Token>& tokens,
		Allocator<ast::Node> node_alloc)
	{
		ParserState state(file_path, tokens, node_alloc);

		Token current(TokenType::START_OF_FILE, 0, 0);
		ast::Node* node = node_alloc.new_object<ast::Node>(ast::NodeType::FILE, current);

		//TODO(ches) stop bailing early and attempt to recover from errors
		if (!package_statement(&state, *node)) {
			return node;
		}
		if (!imports(&state, *node)) {
			return node;
		}
		if (!const_definitions(&state, *node)) {
			return node;
		}

		return node;
	}

	bool package_statement(ParserState* state, ast::Node& parent) {
		if (!expect(state, TokenType::KEYWORD_PACKAGE)) {
			report_error_on_last_token(state, ErrorCode::E3001);
			return false;
		}
		ast::Node& node = next_as_node(state, ast::NodeType::PACKAGE, &parent);

		if (!accept(state, TokenType::IDENTIFIER, ast::NodeType::IDENTIFIER, 
			node)) {
			report_error_on_last_token(state, ErrorCode::E3002);
			return false;
		}
		return true;
	}

	bool imports(ParserState* state, ast::Node& parent) {

		TokenType current_type = current_token(state).type;
		while (current_type == TokenType::KEYWORD_IMPORT 
			|| current_type == TokenType::DIRECTIVE
		) {
			if (current_type == TokenType::DIRECTIVE) {
				ast::Node& directive = next_as_node(state, ast::NodeType::DIRECTIVE, &parent);
				
				bool is_an_if = false;

				if (directive.value.value->compare("#if") == 0
					|| directive.value.value->compare("#else_if") == 0) {
					is_an_if = true;

					ExprResult conditional = expression_with_result(state, true);
					if (!conditional.success) {
						return false;
					}
					directive.children.push_back(conditional.result);
				}
		
				if (is_an_if || directive.value.value->compare("#else") == 0) {
					if (!expect(state, TokenType::SYM_LBRACE)) {
						report_error_on_last_token(state, ErrorCode::E3018);
						return false;
					}
					const Token& lbrace = current_token(state);
					skip(state, TokenType::SYM_LBRACE);
					if (!imports(state, directive)) {
						return false;
					}
					if (!skip(state, TokenType::SYM_RBRACE)) {
						report_error_on_last_token(state, ErrorCode::E3019,
							std::format("Opening brace was at ({},{})",
								lbrace.line_number,
								lbrace.column_number));
						return false;
					}
				}

				if (directive.value.value->compare("#run") == 0) {
					ExprResult expr = expression_with_result(state, true);
					if (!expr.success) {
						return false;
					}
					directive.children.push_back(expr.result);
				}

			}
			else if (!import(state, parent)) {
				return false;
			}
			current_type = current_token(state).type;
		}
		return true;
	}

	bool import(ParserState* state, ast::Node& parent) {
		ast::Node& node = next_as_node(state, ast::NodeType::IMPORT, &parent);

		skip(state, TokenType::KEYWORD_IMPORT);

		if (!accept(state, TokenType::IDENTIFIER, ast::NodeType::IDENTIFIER,
			node)) {
			report_error_on_last_token(state, ErrorCode::E3003);
			return false;
		}

		if (expect(state, TokenType::KEYWORD_AS)) {
			accept(state, TokenType::KEYWORD_AS, ast::NodeType::KEYWORD_AS,
				node);
			if (!accept(state, TokenType::IDENTIFIER,
				ast::NodeType::IDENTIFIER, node)) {
				report_error_on_last_token(state, ErrorCode::E3005);
				return false;
			}
		}

		if (expect(state, TokenType::KEYWORD_FROM)) {
			accept(state, TokenType::KEYWORD_FROM, ast::NodeType::KEYWORD_FROM,
				node);
			if (!accept(state, TokenType::LITERAL_STRING, 
				ast::NodeType::LITERAL, node)) {
				report_error_on_last_token(state, ErrorCode::E3004);
				return false;
			}
		}

		return true;
	}

	bool const_definitions(ParserState* state, ast::Node& parent) {
		while (expect(state, TokenType::IDENTIFIER) 
			|| expect(state, TokenType::DIRECTIVE)) {

			if (expect(state, TokenType::DIRECTIVE)) {
				ast::Node& directive = next_as_node(state, ast::NodeType::DIRECTIVE, &parent);

				bool is_an_if = false;

				if (directive.value.value->compare("#if") == 0
					|| directive.value.value->compare("#else_if") == 0) {
					is_an_if = true;

					ExprResult conditional = expression_with_result(state, true);
					if (!conditional.success) {
						return false;
					}
					directive.children.push_back(conditional.result);
				}

				if (is_an_if || directive.value.value->compare("#else") == 0) {
					if (!expect(state, TokenType::SYM_LBRACE)) {
						report_error_on_last_token(state, ErrorCode::E3018);
						return false;
					}
					const Token& lbrace = current_token(state);
					skip(state, TokenType::SYM_LBRACE);
					if (!const_definitions(state, directive)) {
						return false;
					}
					if (!skip(state, TokenType::SYM_RBRACE)) {
						report_error_on_last_token(state, ErrorCode::E3019,
							std::format("Opening brace was at ({},{})",
								lbrace.line_number,
								lbrace.column_number));
						return false;
					}
				}

				if (directive.value.value->compare("#run") == 0) {
					ExprResult expr = expression_with_result(state, true);
					if (!expr.success) {
						return false;
					}
					directive.children.push_back(expr.result);
				}

			}

			ExprResult decl = declaration(state, parent);

			if (!decl.success) {
				return false;
			}

			if (!const_definition_rhs(state, *decl.result)) {
				return false;
			}
		}
		return true;
	}

	bool any_definition(ParserState* state, ast::Node& parent) {
		ExprResult decl = declaration(state, parent);

		if (!decl.success) {
			return false;
		}

		if (expect(state, TokenType::SYM_COLON)) {
			return const_definition_rhs(state, *decl.result);
		}
		else if (expect(state, TokenType::OPERATOR_ASSIGN)) {
			return mut_definition_rhs(state, *decl.result);
		}
		else {
			report_error_on_last_token(state, ErrorCode::E3006);
			return false;
		}
	}

	bool const_definition_rhs(ParserState* state, ast::Node& parent) {
		if (!accept(state, TokenType::SYM_COLON, ast::NodeType::COLON, parent)) {
			report_error_on_last_token(state, ErrorCode::E3007);
			return false;
		}
		return decl_rhs(state, parent);
	}

	bool mut_definition_rhs(ParserState* state, ast::Node& parent) {
		if (!accept(state, TokenType::OPERATOR_ASSIGN, ast::NodeType::IDENTIFIER, parent)) {
			return false;
		}
		return decl_rhs(state, parent);
	}

	ExprResult declaration(ParserState* state, ast::Node& parent) {
		if (!expect(state, TokenType::IDENTIFIER)) {
			report_error_on_last_token(state, ErrorCode::E3009);
			return ExprResult{ false };
		}
		ast::Node& lhs = next_as_node(state, ast::NodeType::IDENTIFIER);

		while (expect(state, TokenType::DIRECTIVE)) {
			ast::Node& directive = next_as_node(state,
				ast::NodeType::DIRECTIVE, &lhs);

			bool expected = false;
			if (directive.value.value->compare("#export") == 0) {
				expected = true;
			}
			if (!expected) {
				report_error_on_last_token(state, ErrorCode::E3020);
				return false;
			}
		}

		if (!expect(state, TokenType::SYM_COLON)) {
			report_error_on_last_token(state, ErrorCode::E3010);
			delete_node(state->node_alloc, &lhs);
			return ExprResult{ false };
		}
		
		ast::Node& colon = next_as_node(state, ast::NodeType::DEFINITION, &parent);
		colon.children.push_back(&lhs);
		
		if (!expect(state, TokenType::SYM_COLON) 
			&& !expect(state, TokenType::OPERATOR_ASSIGN)) {
			// we aren't deducing the type, there's something here

			ExprResult rhs = type(state);
			if (!rhs.success) {
				return ExprResult{ false };
			}
			colon.children.push_back(rhs.result);
		}

		return ExprResult{ true, &colon };
	}

	bool decl_rhs(ParserState* state, ast::Node& parent) {
		const TokenType current_type = current_token(state).type;

		if (TokenType::KEYWORD_FN == current_type) {
			return function_decl(state, parent);
		}
		if (TokenType::KEYWORD_STRUCT == current_type) {
			return struct_decl(state, parent);
		}
		if (TokenType::KEYWORD_UNION == current_type) {
			return union_decl(state, parent);
		}
		if (TokenType::KEYWORD_ENUM == current_type) {
			return enum_decl(state, parent);
		}
		if (TokenType::KEYWORD_DISTINCT == current_type
			|| TokenType::KEYWORD_ALIAS == current_type
			|| TokenType::KEYWORD_FN == current_type
			|| (TokenType::IDENTIFIER == current_type
				&& (// NOTE(ches) struct literals are expressions
				TokenType::SYM_DOT != next_token(state, 1).type
				|| TokenType::SYM_LBRACE != next_token(state, 2).type)
				&& // NOTE(ches) function calls are expressions
				TokenType::SYM_LPAREN != next_token(state, 1).type
				)
			) {
			// Might or might not find these
			accept(state, TokenType::KEYWORD_DISTINCT, ast::NodeType::KEYWORD_DISTINCT, parent);
			accept(state, TokenType::KEYWORD_ALIAS, ast::NodeType::KEYWORD_ALIAS, parent);
			
			ExprResult rhs = type(state);
			if (!rhs.success) {
				return false;
			}
			parent.children.push_back(rhs.result);
			return true;
		}
		ExprResult rhs = expression_with_result(state, true);
		if (!rhs.success) {
			return false;
		}
		parent.children.push_back(rhs.result);
		return true;
	}

	bool function_decl(ParserState* state, ast::Node& parent) {
		ExprResult sig = function_signature(state);
		if (!sig.success) {
			return false;
		}
		parent.children.push_back(sig.result);
